--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -78,13 +78,13 @@
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
                         <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
-                          <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
+                          <div class="pmx-selector__item JS_selectorItem">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Or</span>
                             </div>
                           </div>
                           <div class="pmx-selector__itemSeperator"></div>
-                          <div class="pmx-selector__item JS_selectorItem">
+                          <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">And</span>
                             </div>
@@ -113,8 +113,37 @@
                               <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
+                    {% include blocks/ms-tags-colors-color-sublist.html %}
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
+                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                <div class="pmx-selector__item">
+                                  <div class="pmx-selector__block">
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</div>
                                   </div>
                                 </div>
                               </div>
