Filter_tags: fixed adding new item

--- a/_includes/javascript/colorAction.html
+++ b/_includes/javascript/colorAction.html
@@ -1,15 +1,1 @@
-<li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-    <div class="pmx-field">
-      <div class="pmx-field__inner">
-        <div class="pmx-selector pmx-selector--expanded">
-          <div class="pmx-selector__item pmx-selector__item--selected">
-            <div class="pmx-selector__block">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: ${color};" data-color="${color}">ग़</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</li>
+<div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: ${color};" data-color="${color}">ग़</div>
