--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,7 +1,20 @@
 <ul class="itemBoxTable__bodyRow JS_filterableCell">
-  ${colorHTML}
   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text ${excludeClass}">${textOfActionItem}</div>
+    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text ${excludeClass}">
+
+      <div class="pmx-field">
+        <div class="pmx-field__inner">
+          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+            <div class="pmx-selector__item">
+              <div class="pmx-selector__block">
+                ${colorHTML}
+                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">${textOfActionItem}</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </li>
   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
     <div class="itemBoxTable__bodyCellInner">
