--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -106,8 +106,8 @@
                 <div class="itemBoxTable">
                   <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
-                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                      <li class="itemBoxTable__bodyCell " style="flex-grow: 6;" data-flex="6">
+                        <div class="itemBoxTable__bodyCellInner ">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
                               <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
@@ -133,36 +133,6 @@
                         </div>
                       </li>
                     </ul>
-
-                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
-                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
-                                <div class="pmx-selector__item">
-                                  <div class="pmx-selector__block">
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Marketing</div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </li>
-                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
-                        <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
-                        </div>
-                      </li>
-                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-                        <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
-                        </div>
-                      </li>
-                    </ul>
-
                   </div>
                 </div>
               </div>
@@ -205,8 +175,8 @@
                 <div class="itemBoxTable">
                   <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
-                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                      <li class="itemBoxTable__bodyCell " style="flex-grow: 6;" data-flex="6">
+                        <div class="itemBoxTable__bodyCellInner ">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
                               <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
@@ -235,8 +205,8 @@
 
 
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                      <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
-                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                      <li class="itemBoxTable__bodyCell " style="flex-grow: 6;" data-flex="6">
+                        <div class="itemBoxTable__bodyCellInner ">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
                               <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
@@ -308,8 +278,8 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 6;" data-flex="6">
+                  <div class="itemBoxTable__bodyCellInner ">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
                         <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
@@ -349,8 +319,8 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 6;" data-flex="6">
+                  <div class="itemBoxTable__bodyCellInner ">
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
                         <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
@@ -392,8 +362,8 @@
 
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 6;" data-flex="6">
+                  <div class="itemBoxTable__bodyCellInner ">
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
@@ -437,8 +407,8 @@
 
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 6;" data-flex="6">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 6;" data-flex="6">
+                  <div class="itemBoxTable__bodyCellInner ">
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
