--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -1,4 +1,4 @@
-<div class="multiSelector multiSelector--popup" id="multiSelector-tagpicker">
+<div class="multiSelector multiSelector--popup JS_multiSelector--withColors" id="multiSelector-tagpicker">
 
   <div class="itemBox JS_multiSelector__box ">
     <div class="itemBoxTable">
