--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -7,7 +7,7 @@
     ${andOrSelector}
     <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
       <div class="itemBoxTable__bodyCellInner">
-        <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">ޅ</i>
+        <i class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">—</i>
       </div>
     </li>
 </ul>
