Filter-tags: fix default state

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -133,6 +133,34 @@
                         </div>
                       </li>
                     </ul>
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
+                      <li class="itemBoxTable__bodyCell " style="flex-grow: 6;" data-flex="6">
+                        <div class="itemBoxTable__bodyCellInner ">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                <div class="pmx-selector__item">
+                                  <div class="pmx-selector__block">
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Marketing</div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable ui-sortable-handle" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--drag">އ</i>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -252,11 +280,6 @@
               <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
             </div>
           </li>
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add JS_itemBoxTable__bodyCell--addAll" style="flex-grow: 0;" data-flex="0">
-            <div class="itemBoxTable__bodyCellInner">
-              <i class="itemBoxTable__action itemBoxTable__action--add JS_itemBoxTable__action--addAll">ބ</i>
-            </div>
-          </li>
         </ul>
 
         <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
@@ -285,7 +308,7 @@
                         <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Design</div>
                             </div>
                           </div>
@@ -326,7 +349,7 @@
                         <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Marketing</div>
                             </div>
                           </div>
@@ -335,9 +358,9 @@
                     </div>
                   </div>
                 </li>
-                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--add" style="flex-grow: 0;" data-flex="0">
+                <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
                   <div class="itemBoxTable__bodyCellInner">
-                    <i class="itemBoxTable__action itemBoxTable__action--add">ބ</i>
+                    <i class="itemBoxTable__action itemBoxTable__action--remove">—</i>
                   </div>
                 </li>
               </ul>
@@ -398,7 +421,7 @@
                         <div class="pmx-selector pmx-selector">
                           <div class="pmx-selector__item pmx-selector__item--selected">
                             <div class="pmx-selector__block">
-                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Include">Include</span>
+                              <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Exclude">Exclude</span>
                             </div>
                           </div>
                         </div>
