newSelectedItem: removed duplicated itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text

--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,6 +1,6 @@
 <ul class="itemBoxTable__bodyRow JS_filterableCell">
   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
-    <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text ${excludeClass}">
+    <div class="itemBoxTable__bodyCellInner ${excludeClass}">
 
       <div class="pmx-field">
         <div class="pmx-field__inner">
