--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -114,7 +114,7 @@
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Design</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</div>
                                   </div>
                                 </div>
                               </div>
@@ -142,7 +142,7 @@
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Marketing</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</div>
                                   </div>
                                 </div>
                               </div>
@@ -211,7 +211,7 @@
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Front-end</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</div>
                                   </div>
                                 </div>
                               </div>
@@ -241,7 +241,7 @@
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Back-end</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Back-end</div>
                                   </div>
                                 </div>
                               </div>
@@ -309,7 +309,7 @@
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Design</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Design</div>
                             </div>
                           </div>
                         </div>
@@ -350,7 +350,7 @@
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Marketing</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Marketing</div>
                             </div>
                           </div>
                         </div>
@@ -394,7 +394,7 @@
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Front-end</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Front-end</div>
                             </div>
                           </div>
                         </div>
@@ -439,7 +439,7 @@
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022">ग़</div>
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Back-end</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Back-end</div>
                             </div>
                           </div>
                         </div>
