added create new html + filter date example dates

--- a/_includes/blocks/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/ms-tags-colors-suggestions.html
@@ -39,11 +39,8 @@
       </ul>
       {% include blocks/ms-tags-colors-color-sublist.html %}
 
-      <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore JS_createNewTag">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner">Create New Tag</div>
-        </li>
-      </ul>
+      {% include blocks/ms-create-new.html %}
+
     </div>
   </div>
 </div>
