--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -170,7 +170,7 @@
         <div class="itemBox itemBox--children JS_multiSelector__box--optionsChildren">
           <div class="itemBoxTable">
             <div class="itemBoxBody">
-              <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
+              <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
                     <i class="itemBoxTable__action--toggle">ऄ Smart Dates</i>
@@ -182,9 +182,37 @@
                   </div>
                 </li>
               </ul>
+              <div class="itemBox itemBox--children">
+                <div class="itemBoxTable">
+                  <div class="itemBoxBody">
+                    <ul class="itemBoxTable__bodyRow">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block ">
+                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
+                    {% include blocks/ms-create-new.html %}
 
+                  </div>
+                </div>
+              </div>
+              <!-- smart dates -->
 
-              <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
+              <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
                     <i class="itemBoxTable__action--toggle">ऄ Simple Dates</i>
@@ -196,9 +224,37 @@
                   </div>
                 </li>
               </ul>
+              <div class="itemBox itemBox--children">
+                <div class="itemBoxTable">
+                  <div class="itemBoxBody">
+                    <ul class="itemBoxTable__bodyRow">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block ">
+                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
+                    {% include blocks/ms-create-new.html %}
 
+                  </div>
+                </div>
+              </div>
+              <!-- simple dates -->
 
-              <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
+              <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
                     <i class="itemBoxTable__action--toggle">ऄ Ranges</i>
@@ -210,9 +266,37 @@
                   </div>
                 </li>
               </ul>
+              <div class="itemBox itemBox--children">
+                <div class="itemBoxTable">
+                  <div class="itemBoxBody">
+                    <ul class="itemBoxTable__bodyRow">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block ">
+                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
+                    {% include blocks/ms-create-new.html %}
 
+                  </div>
+                </div>
+              </div>
+              <!-- ranges -->
 
-              <ul class="itemBoxTable__bodyRow JS_multiSelector__box--optionsTitle">
+              <ul class="itemBoxTable__bodyRow">
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
                     <i class="itemBoxTable__action--toggle">ऄ Next/Last</i>
@@ -224,7 +308,35 @@
                   </div>
                 </li>
               </ul>
+              <div class="itemBox itemBox--children">
+                <div class="itemBoxTable">
+                  <div class="itemBoxBody">
+                    <ul class="itemBoxTable__bodyRow">
+                      <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <div class="pmx-field">
+                            <div class="pmx-field__inner">
+                              <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
+                                <div class="pmx-selector__block ">
+                                  <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+                        <div class="itemBoxTable__bodyCellInner">
+                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                        </div>
+                      </li>
+                    </ul>
+                    {% include blocks/ms-create-new.html %}
 
+                  </div>
+                </div>
+              </div>
+              <!-- next last dates -->
             </div>
           </div>
         </div>
